--- a/Group2_SAD/src/main/resources/sadprojectwork/Paint.css
+++ b/Group2_SAD/src/main/resources/sadprojectwork/Paint.css
@@ -2,4 +2,10 @@
 .colorButton {
     -fx-background-radius: 15px;
     -fx-border-radius: 15px;
+    -fx-border-width: 3;
+    -fx-font-size: 1;
+}
+
+.colorButton:selected {
+    -fx-border-color: gray;
 }
