Updated UI and added Cursor selection to pan

--- a/Group2_SAD/src/main/resources/sadprojectwork/Paint.css
+++ b/Group2_SAD/src/main/resources/sadprojectwork/Paint.css
@@ -1,11 +1,26 @@
 
-.colorButton {
-    -fx-background-radius: 15px;
-    -fx-border-radius: 15px;
-    -fx-border-width: 3;
+.color-button {
+    -fx-min-width: 20px;
+    -fx-max-width: 20px;
+    -fx-min-height: 20px;
+    -fx-min-height: 20px;
+    -fx-background-radius: 50%;
+    -fx-border-radius: 50%;
+    -fx-padding: 0;
+    -fx-border-color: rgba(0, 0, 0, 0.2);
+    -fx-border-width: 2;
+    -fx-cursor: hand;
+    -fx-scale-x: 1;
+    -fx-scale-y: 1;
     -fx-font-size: 1;
+    -fx-transition: all 0.2s ease-in-out;
 }
 
-.colorButton:selected {
-    -fx-border-color: gray;
+.color-button:hover {
+    -fx-border-color: transparent;
+}
+
+.color-button:selected {
+    -fx-scale-x: 1.5;
+    -fx-scale-y: 1.5;
 }
