--- a/Group2_SAD/src/main/resources/ui/arsnova.fxml
+++ b/Group2_SAD/src/main/resources/ui/arsnova.fxml
@@ -21,13 +21,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="rootPane" prefHeight="720.0" prefWidth="1280.0" stylesheets="@Paint.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sadprojectwork.PaintController">
+<AnchorPane id="AnchorPane" fx:id="rootPane" prefHeight="720.0" prefWidth="1280.0" stylesheets="@arsnova.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sadprojectwork.PaintController">
    <children>
       <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
             <ScrollPane focusTraversable="false" pannable="true" BorderPane.alignment="CENTER">
                <contextMenu>
-                  <ContextMenu fx:id="rightClickMenu">
+                  <ContextMenu>
                     <items>
                         <MenuItem disable="true" mnemonicParsing="false" onAction="#cutShape" text="Cut">
                            <accelerator>
@@ -88,7 +88,7 @@
                   </MenuBar>
                   <HBox alignment="CENTER_LEFT" spacing="20.0" VBox.vgrow="ALWAYS">
                      <children>
-                        <ToggleButton mnemonicParsing="false" onAction="#selectCursor" prefHeight="60.0" prefWidth="60.0" selected="true" text="Cursor" textAlignment="CENTER">
+                        <ToggleButton fx:id="cursorButton" mnemonicParsing="false" onAction="#selectCursor" prefHeight="60.0" prefWidth="60.0" selected="true" textAlignment="CENTER">
                            <toggleGroup>
                               <ToggleGroup fx:id="shapes" />
                            </toggleGroup>
@@ -138,13 +138,13 @@
                                                       <ToggleGroup fx:id="borderColor" />
                                                    </toggleGroup>
                                                 </ToggleButton>
-                                                <ToggleButton layoutX="10.0" layoutY="45.0" mnemonicParsing="false" onAction="#selectFillColor" style="-fx-background-color: white;" styleClass="color-button" textAlignment="CENTER" toggleGroup="$borderColor" />
-                                                <ToggleButton layoutX="64.0" layoutY="45.0" mnemonicParsing="false" onAction="#selectFillColor" style="-fx-background-color: red;" styleClass="color-button" textAlignment="CENTER" toggleGroup="$borderColor" />
-                                                <ToggleButton layoutX="117.0" layoutY="45.0" mnemonicParsing="false" onAction="#selectFillColor" style="-fx-background-color: orange;" styleClass="color-button" textAlignment="CENTER" toggleGroup="$borderColor" />
-                                                <ToggleButton layoutX="171.0" layoutY="45.0" mnemonicParsing="false" onAction="#selectFillColor" style="-fx-background-color: yellow;" styleClass="color-button" textAlignment="CENTER" toggleGroup="$borderColor" />
-                                                <ToggleButton layoutX="224.0" layoutY="45.0" mnemonicParsing="false" onAction="#selectFillColor" style="-fx-background-color: green;" styleClass="color-button" textAlignment="CENTER" toggleGroup="$borderColor" />
-                                                <ToggleButton layoutX="278.0" layoutY="45.0" mnemonicParsing="false" onAction="#selectFillColor" style="-fx-background-color: blue;" styleClass="color-button" textAlignment="CENTER" toggleGroup="$borderColor" />
-                                                <ToggleButton layoutX="332.0" layoutY="45.0" mnemonicParsing="false" onAction="#selectFillColor" style="-fx-background-color: purple;" styleClass="color-button" textAlignment="CENTER" toggleGroup="$borderColor" />
+                                                <ToggleButton layoutX="10.0" layoutY="45.0" mnemonicParsing="false" onAction="#selectBorderColor" style="-fx-background-color: white;" styleClass="color-button" textAlignment="CENTER" toggleGroup="$borderColor" />
+                                                <ToggleButton layoutX="64.0" layoutY="45.0" mnemonicParsing="false" onAction="#selectBorderColor" style="-fx-background-color: red;" styleClass="color-button" textAlignment="CENTER" toggleGroup="$borderColor" />
+                                                <ToggleButton layoutX="117.0" layoutY="45.0" mnemonicParsing="false" onAction="#selectBorderColor" style="-fx-background-color: orange;" styleClass="color-button" textAlignment="CENTER" toggleGroup="$borderColor" />
+                                                <ToggleButton layoutX="171.0" layoutY="45.0" mnemonicParsing="false" onAction="#selectBorderColor" style="-fx-background-color: yellow;" styleClass="color-button" textAlignment="CENTER" toggleGroup="$borderColor" />
+                                                <ToggleButton layoutX="224.0" layoutY="45.0" mnemonicParsing="false" onAction="#selectBorderColor" style="-fx-background-color: green;" styleClass="color-button" textAlignment="CENTER" toggleGroup="$borderColor" />
+                                                <ToggleButton layoutX="278.0" layoutY="45.0" mnemonicParsing="false" onAction="#selectBorderColor" style="-fx-background-color: blue;" styleClass="color-button" textAlignment="CENTER" toggleGroup="$borderColor" />
+                                                <ToggleButton layoutX="332.0" layoutY="45.0" mnemonicParsing="false" onAction="#selectBorderColor" style="-fx-background-color: purple;" styleClass="color-button" textAlignment="CENTER" toggleGroup="$borderColor" />
                                              </children>
                                              <padding>
                                                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
