--- a/Group2_SAD/src/main/resources/ui/arsnova.fxml
+++ b/Group2_SAD/src/main/resources/ui/arsnova.fxml
@@ -25,33 +25,6 @@
 <AnchorPane id="AnchorPane" fx:id="rootPane" prefHeight="720.0" prefWidth="1280.0" stylesheets="@arsnova.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sadprojectwork.PaintController">
    <children>
       <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <center>
-            <ScrollPane fx:id="drawingPane" focusTraversable="false" pannable="true" BorderPane.alignment="CENTER">
-               <contextMenu>
-                  <ContextMenu>
-                    <items>
-                        <MenuItem fx:id="cutMenuItem" disable="true" mnemonicParsing="false" onAction="#cutShape" text="Cut">
-                           <accelerator>
-                              <KeyCodeCombination alt="UP" code="X" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
-                           </accelerator></MenuItem>
-                        <MenuItem fx:id="copyMenuItem" disable="true" mnemonicParsing="false" onAction="#copyShape" text="Copy">
-                           <accelerator>
-                              <KeyCodeCombination alt="UP" code="C" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
-                           </accelerator></MenuItem>
-                        <MenuItem fx:id="pasteMenuItem" disable="true" mnemonicParsing="false" onAction="#pasteShape" text="Paste">
-                           <accelerator>
-                              <KeyCodeCombination alt="UP" code="V" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
-                           </accelerator></MenuItem>
-                      <MenuItem fx:id="deleteMenuItem" disable="true" mnemonicParsing="false" onAction="#deleteShape" text="Delete" />
-                        <MenuItem fx:id="resizeMenuItem" disable="true" mnemonicParsing="false" onAction="#showResizeWindow" text="Resize" />
-                    </items>
-                  </ContextMenu>
-               </contextMenu>
-               <content>
-                  <Pane fx:id="canvas" prefHeight="5000.0" prefWidth="5000.0" />
-               </content>
-            </ScrollPane>
-         </center>
          <top>
             <VBox BorderPane.alignment="CENTER">
                <children>
@@ -200,6 +173,36 @@
                </children>
             </VBox>
          </top>
+         <center>
+            <ScrollPane fx:id="drawingPane" focusTraversable="false" pannable="true" BorderPane.alignment="CENTER">
+               <contextMenu>
+                  <ContextMenu>
+                    <items>
+                        <MenuItem fx:id="cutMenuItem" disable="true" mnemonicParsing="false" onAction="#cutShape" text="Cut">
+                           <accelerator>
+                              <KeyCodeCombination alt="UP" code="X" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                           </accelerator>
+                        </MenuItem>
+                        <MenuItem fx:id="copyMenuItem" disable="true" mnemonicParsing="false" onAction="#copyShape" text="Copy">
+                           <accelerator>
+                              <KeyCodeCombination alt="UP" code="C" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                           </accelerator>
+                        </MenuItem>
+                        <MenuItem fx:id="pasteMenuItem" disable="true" mnemonicParsing="false" onAction="#pasteShape" text="Paste">
+                           <accelerator>
+                              <KeyCodeCombination alt="UP" code="V" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                           </accelerator>
+                        </MenuItem>
+                      <MenuItem fx:id="deleteMenuItem" disable="true" mnemonicParsing="false" onAction="#deleteShape" text="Delete" />
+                        <MenuItem fx:id="resizeMenuItem" disable="true" mnemonicParsing="false" onAction="#showResizeWindow" text="Resize" />
+                    </items>
+                  </ContextMenu>
+               </contextMenu>
+               <content>
+                  <Pane fx:id="canvas" prefHeight="5000.0" prefWidth="5000.0" />
+               </content>
+            </ScrollPane>
+         </center>
          <right>
             <VBox fx:id="propertiesPanel" managed="false" prefWidth="150.0" spacing="20.0" visible="false" BorderPane.alignment="CENTER">
                <children>
@@ -216,7 +219,8 @@
                </children>
                <padding>
                   <Insets bottom="20.0" left="10.0" right="10.0" top="20.0" />
-               </padding></VBox>
+               </padding>
+            </VBox>
          </right>
       </BorderPane>
    </children>
