--- a/Group2_SAD/src/main/resources/ui/arsnova.fxml
+++ b/Group2_SAD/src/main/resources/ui/arsnova.fxml
@@ -82,7 +82,7 @@
                                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                       </rowConstraints>
                                        <children>
-                                          <ToggleButton mnemonicParsing="false" onAction="#selectShapeEllipsis" prefHeight="30.0" prefWidth="100.0" text="Ellipsis" textAlignment="CENTER" toggleGroup="$shapes" GridPane.rowIndex="1" />
+                                          <ToggleButton mnemonicParsing="false" onAction="#selectShapeEllipse" prefHeight="30.0" prefWidth="100.0" text="Ellipse" textAlignment="CENTER" toggleGroup="$shapes" GridPane.rowIndex="1" />
                                           <ToggleButton mnemonicParsing="false" onAction="#selectShapeRectangle" prefHeight="30.0" prefWidth="100.0" text="Rectangle" textAlignment="CENTER" toggleGroup="$shapes" GridPane.columnIndex="1" />
                                           <ToggleButton mnemonicParsing="false" onAction="#selectShapeLine" prefHeight="30.0" prefWidth="100.0" text="Line" textAlignment="CENTER" toggleGroup="$shapes" />
                                        </children>
