--- a/Group2_SAD/src/main/resources/ui/arsnova.fxml
+++ b/Group2_SAD/src/main/resources/ui/arsnova.fxml
@@ -445,7 +445,7 @@
          <right>
             <VBox fx:id="propertiesPanel" managed="false" spacing="20.0" visible="false" BorderPane.alignment="CENTER">
                <children>
-                  <TitledPane animated="false" text="Border">
+                  <TitledPane fx:id="borderPanel" animated="false" text="Border">
                      <content>
                         <VBox alignment="TOP_CENTER" spacing="10.0">
                            <children>
@@ -597,7 +597,7 @@
                         </VBox>
                      </content>
                   </TitledPane>
-                  <TitledPane animated="false" layoutX="10.0" layoutY="10.0" text="Fill">
+                  <TitledPane fx:id="fillPanel" animated="false" layoutX="10.0" layoutY="10.0" text="Fill">
                      <content>
                         <VBox alignment="TOP_CENTER" spacing="10.0">
                            <children>
