--- a/Group2_SAD/src/main/resources/ui/arsnova.fxml
+++ b/Group2_SAD/src/main/resources/ui/arsnova.fxml
@@ -482,11 +482,7 @@
                         </MenuItem>
                       <MenuItem fx:id="deleteMenuItem" disable="true" mnemonicParsing="false" onAction="#deleteShape" text="Delete" />
                         <MenuItem fx:id="frontMenuItem" disable="true" mnemonicParsing="false" onAction="#bringToFront" text="Bring to the front" />
-                        <MenuItem fx:id="backMenuItem" disable="true" mnemonicParsing="false" onAction="#bringToBack" text="Bring to the back">
-                           <accelerator>
-                              <KeyCodeCombination alt="UP" code="V" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
-                           </accelerator>
-                        </MenuItem>
+                        <MenuItem fx:id="backMenuItem" disable="true" mnemonicParsing="false" onAction="#bringToBack" text="Bring to the back" />
                     </items>
                   </ContextMenu>
                </contextMenu>
